thirdparty/boost/libs/outcome/test/compile-fail/.uuid
314071ed-900e-4fe3-aef3-4f590ec47866